# rocket-identity

./: Cargo.toml  LICENSE  README.md
.devcontainer/: devcontainer.json
examples/: Cargo.toml  hello.rs  jwt.http  jwt.rs
examples/authenticated-todo/: Cargo.toml
examples/authenticated-todo/migrations/20160720150332_create_tasks_table/: up.sql
examples/authenticated-todo/migrations/20230722171004_create_users_table/: up.sql
examples/authenticated-todo/src/: main.rs  task.rs  tests.rs  user.rs
examples/authenticated-todo/static/: base.html.tera  index.html.tera  login.html.tera  register.html.tera
examples/todo/: main.rs  requests.http  todo.rs  users.rs
examples/todo/routes/: todo.rs  users.rs
examples/todo/services/: mod.rs  todo.rs
examples/user_management/: main.rs  requests.http
src/: config.rs  fairing.rs  lib.rs  services.rs  util.rs
src/auth/: authenticator.rs  authorization.rs  authorized.rs  claims.rs  error.rs  hasher.rs  mod.rs  repository.rs  roles.rs  scheme.rs  user.rs  user_builder.rs  user_data.rs  user_id.rs
src/auth/hasher/: argon2.rs  base.rs  identity.rs  mod.rs  pbkdf2.rs
src/auth/hashers/: argon2.rs  identity.rs  impls.rs  mod.rs
src/auth/policy/: any.rs  base.rs  mod.rs
src/hashers/: hasher.rs  identity.rs  impls.rs  mod.rs
src/persistence/: base.rs  in_memory.rs  mod.rs  repository.rs  store.rs  user.rs
src/policy/: any.rs  mod.rs  policy.rs
src/scheme/: base.rs  basic.rs  challenger.rs  mod.rs  scheme.rs
src/schemes/: impls.rs  mod.rs
src/stores/: impls.rs  mod.rs  scope.rs  store.rs
tests/: authenticated.rs  unauthenticated.rs
(+55 files in other folders)
