[package]
name = "rocket-identity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21"
jsonwebtoken = "8.3"
ring = "0.16"
rocket = { version = "=0.5.0-rc.3", default-features = false}
thiserror = "1.0"


[dev-dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["json"]}