[package]
name = "rocket-identity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = { version = "0.5", default-features = false, features = ["std", "password-hash"]}
base64 = "0.21"
cfg-if = "1.0"
jsonwebtoken = "8.3"
log = "0.4"
rocket = { version = "=0.5.0-rc.3", default-features = false, features=["json", "secrets"] }
thiserror = "1.0"

[dev-dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
