[package]
name = "authenticated-todo"
version = "0.0.0"
workspace = "../../"
edition = "2021"
publish = false

[dependencies]
rocket = { version = "=0.5.0-rc.3" }
rocket-identity = { path = "../.." }
diesel = { version = "2.0.0", features = ["sqlite", "r2d2"] }
diesel_migrations = "2.0.0"

[dev-dependencies]
parking_lot = "0.12"
rand = "0.8"

[dependencies.rocket_sync_db_pools]
version = "=0.1.0-rc.3"
features = ["diesel_sqlite_pool"]

[dependencies.rocket_dyn_templates]
version = "=0.1.0-rc.3"
features = ["tera"]
